@@ -1,3 +1,8 @@
+2010-11-12  Marc Khouzam  <marc.khouzam@ericsson.com>
+
+	* mi/mi-main.c (mi_cmd_target_detach): Accept new
+	thread-group id format.
+
 2010-11-04  Hui Zhu  <teawater@gmail.com>
 
 	* tracepoint.c (remote_trace_set_readonly_regions): Change lma to vma.
